# ComputationalGraph-C

./: CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt  ComputationalGraph.c  ComputationalGraph.h  NeuralNetworkParameter.c  NeuralNetworkParameter.h
src/Function/: Delu.c  Delu.h  Dropout.c  Dropout.h  Elu.c  Elu.h  Function.h  Negation.c  Negation.h  Relu.c  Relu.h  Sigmoid.c  Sigmoid.h  SoftMax.c  SoftMax.h  Tanh.c  Tanh.h
src/Initialization/: HeUniformInitialization.c  HeUniformInitialization.h  Initialization.h  RandomInitialization.c  RandomInitialization.h  UniformXavierInitialization.c  UniformXavierInitialization.h
src/Node/: ComputationalNode.c  ComputationalNode.h  ConcatenatedNode.c  ConcatenatedNode.h  MultiplicationNode.c  MultiplicationNode.h
src/Optimizer/: Adam.c  Adam.h  AdamW.c  AdamW.h  Optimizer.c  Optimizer.h  SGDMomentum.c  SGDMomentum.h  StochasticGradientDescent.c  StochasticGradientDescent.h
test/: DeepNetwork.c  DeepNetwork.h  LinearPerceptron.c  LinearPerceptron.h  LinearPerceptronSingleUnit.c  LinearPerceptronSingleUnit.h  MultiLayerPerceptron.c  MultiLayerPerceptron.h  NeuralNet.c  NeuralNet.h  Test.c
